@@ -63,7 +63,7 @@ server = function(input, output, session) {
     myPars$updateVTL = FALSE
 
     # first reset everything to defaults
-    for (v in rownames(permittedValues)[1:which(rownames(permittedValues) == 'rolloffNoise')]) {
+    for (v in rownames(permittedValues)[1:which(rownames(permittedValues) == 'rolloffNoiseExp')]) {
       updateSliderInput(session, v, value = permittedValues[v,'default'])
     }
     lists_to_default = c('pitch', 'pitchGlobal', 'mouth',
@@ -300,12 +300,12 @@ server = function(input, output, session) {
       myPars$formantsNoise = NA
       updateTextInput(session, inputId = 'formantsNoise', value = 'NA')
     } else if (nchar(input$noiseType) > 0) {  # TODO - check if this always works!!!
-      n = presets[[input$speaker]]$Formants$consonants[input$noiseType] [[1]]
+      n = presets[[input$speaker]]$Formants$consonants[input$noiseType][[1]]
       myPars$formantsNoise = n[3:length(n)]
       updateSliderInput(session, inputId = 'rolloffNoise',
                         value = n[['rolloffNoise']])
       updateTextInput(session, inputId = 'formantsNoise',
-                      value = as.character(call('print', myPars$formantsNoise)[2]))
+                      value = paste0('list(', toString(myPars$formantsNoise), ')'))
     }
   })
 
@@ -1216,6 +1216,7 @@ server = function(input, output, session) {
       noise = myPars$noise,
       formantsNoise = myPars$formantsNoise,
       rolloffNoise = input$rolloffNoise,
+      rolloffNoiseExp = input$rolloffNoiseExp,
       mouth = myPars$mouth,
       ampl = myPars$ampl,
       amplGlobal = myPars$amplGlobal,
@@ -1379,7 +1380,8 @@ server = function(input, output, session) {
   shinyBS::addTooltip(session, id='mouth_flatten', title = 'Revert to a flat mouth opening contour with opening degree equal to the first (left) anchor', placement="right", trigger="hover", options = list(delay = list(show=1000, hide=0)))
   shinyBS::addTooltip(session, id='mouthOpenThres', title = 'The degree of mouth opening at which lips separate and start to radiate', placement="right", trigger="hover", options = list(delay = list(show=1000, hide=0)))
   shinyBS::addTooltip(session, id='noiseType', title = "Breathing = glottal noise (same formants as for voiced part); snuffling = breathing through the nose; h / s / sh / f = sibilants", placement="right", trigger="hover", options = list(delay = list(show=1000, hide=0)))
-  shinyBS::addTooltip(session, id='rolloffNoise', title = 'Rolloff of the noise component (affects both breathing and supra-glottal noise)', placement="right", trigger="hover", options = list(delay = list(show=1000, hide=0)))
+  shinyBS::addTooltip(session, id='rolloffNoise', title = 'Linear rolloff of the noise component, dB/kHz above 2 kHz (affects both breathing and supra-glottal noise)', placement="right", trigger="hover", options = list(delay = list(show=1000, hide=0)))
+  shinyBS::addTooltip(session, id='rolloffNoiseExp', title = 'Exponential rolloff of the noise component, dB/oct (affects both breathing and supra-glottal noise)', placement="right", trigger="hover", options = list(delay = list(show=1000, hide=0)))
 
   # spectrogram controls
   shinyBS::addTooltip(session, id='specWindowLength', title = 'Window length for FFT transform (Gaussian)', placement="below", trigger="hover", options = list(delay = list(show=1000, hide=0)))
